# ani-fetch

./: .editorconfig  .gitignore  README.md  cargo.toml  package.json  tailwind.config.cjs  vite.config.ts
ani-app/: package.json
ani-app/src/: App.svelte
ani-app/src-tauri/: Cargo.toml  tauri.conf.json
ani-app/src-tauri/src/: main.rs
fetcher/: Cargo.toml
fetcher/src/: main.rs  nyaa.rs  qbit.rs
fetcher/src/json_struct/: mod.rs  torrent_info.rs
nyaa-finder/: Cargo.toml
nyaa-finder/src/: lib.rs  main.rs
qbittorrent/: Cargo.toml
qbittorrent/src/: lib.rs
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fetcher/src/: lib.rs  main.rs  nyaa.rs  qbit.rs
src-tauri/fetcher/src/json_struct/: torrent_info.rs
src-tauri/src/: main.rs
types/: torrents.ts
