[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.9", features = ["multipart","default","json"] }
scraper = "0.13.0"
tokio = {version = "1.17.0", features = ["full"]}
serde= {version = "1", features = ["derive"]}
serde_json = {version = "1"}
regex= "1.5.6"
lazy_static = "1.4.0"